fix(be): [Config] resolve PMD static analysis violation for inefficient empty string check